<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true"
    android:persistent="true" >

    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/data_source" >
        <ListPreference
            android:defaultValue="NONE"
            android:dialogTitle="@string/search_source"
            android:entries="@array/search_sources"
            android:entryValues="@array/search_sources_values"
            android:key="search_source"
            android:summary="@string/search_source_summary"
            android:title="@string/search_source" />

        <PreferenceScreen
            android:summary="@string/offline_db_summary"
            android:title="@string/offline_db" >
            <Preference
                android:key="preference_download"
                android:summary="Select and download offline area data"
                android:title="Download offline data..." />
            <Preference
                android:key="preference_import_pbf"
                android:summary="@string/import_pbf_summary"
                android:title="@string/import_pbf" />

            <PreferenceScreen
                android:summary="@string/import_settings_summary"
                android:title="@string/import_settings" >
                <PreferenceScreen android:title="Import nodes…" >
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_node_highway"
                        android:title="Highway" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_node_building"
                        android:persistent="true"
                        android:title="Buildings" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_nodes_barrier"
                        android:title="Barrier" />
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="include_node_other"
                        android:title="All other" />
                </PreferenceScreen>
                <PreferenceScreen android:title="Import ways…" >
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_way_building"
                        android:persistent="true"
                        android:title="Buildings" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:enabled="false"
                        android:key="include_way_highway"
                        android:persistent="true"
                        android:summary="Will be imported if &quot;Import addresses&quot; checked"
                        android:title="Roads" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_way_other"
                        android:persistent="false"
                        android:title="All other" />
                </PreferenceScreen>
                <PreferenceScreen android:title="Import relations…" >
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_relation_landuse"
                        android:title="Landuses" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_relation_natural"
                        android:title="Naturals" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_relation_leisure"
                        android:title="Leisures" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_relation_boundary"
                        android:title="Boundaries" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_relation_area"
                        android:title="Areas" />
                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="include_relation_waterway"
                        android:title="Waterways" />
                    <CheckBoxPreference
                        android:defaultValue="true"
                        android:key="include_relation_other"
                        android:title="All other" />
                </PreferenceScreen>

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="import_addresses"
                    android:title="Import addresses" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:dependency="debug_show_debug_preferences"
                    android:key="debug_import_build_grid"
                    android:summary="debug option"
                    android:title="Build grid (debug)" />
                <CheckBoxPreference
                    android:defaultValue="True"
                    android:dependency="debug_show_debug_preferences"
                    android:key="debug_import_cleardb"
                    android:summary="debug option"
                    android:title="Clear DB before import (debug)" />
            </PreferenceScreen>

            <Preference
                android:dependency="debug_show_debug_preferences"
                android:key="debug_rebuild_grid"
                android:persistent="false"
                android:shouldDisableView="true"
                android:summary="debug option"
                android:title="Rebuild grid (debug)" />
            <Preference
                android:dependency="debug_show_debug_preferences"
                android:key="debug_clear_db"
                android:persistent="false"
                android:shouldDisableView="true"
                android:summary="debug option"
                android:title="Clear DB (debug)" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="is_db_on_sdcard"
                android:summaryOff="@string/db_on_sdcard_false"
                android:summaryOn="@string/db_on_sdcard_true"
                android:title="@string/db_on_sdcard" />

            <EditTextPreference
                android:defaultValue="1000"
                android:dependency="debug_show_debug_preferences"
                android:key="grid_size"
                android:numeric="integer"
                android:persistent="true"
                android:summary="Maximum count of nodes in one cell"
                android:title="Size of grid cell (debug)" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="debug_show_debug_preferences"
                android:persistent="false"
                android:title="Enable debug options" />
        </PreferenceScreen>
        <PreferenceScreen
            android:enabled="false"
            android:selectable="true"
            android:summary="TODO"
            android:title="Online" >
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/ui" >
        <ListPreference
            android:dialogTitle="@string/result_language"
            android:entries="@array/languages"
            android:entryValues="@array/languages_code"
            android:key="result_language"
            android:title="@string/result_language" />
    </PreferenceCategory>

</PreferenceScreen>